--- a/laravue/package.json
+++ b/laravue/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "babel": "^6.23.0",
         "vue-router": "^3.0.1",
         "vue-sweetalert2": "^1.5.2"
     }
